fixed ref and label

--- a/experimental.tex
+++ b/experimental.tex
@@ -753,7 +753,8 @@ de clase, lo que redunda en mayor confiabilidad del software verificado.
 \input{tables/bugRepOk}
 
 \subsection{RQ7: Usando BEAPI para el testing parametrizado}
-\ref{sec:parametrizedTesting}
+\label{sec:parametrizedTesting}
+
 En esta etapa de la evaluación, se llevó a cabo un análisis exhaustivo para determinar la 
 utilidad de los métodos generadores identificados mediante nuestro enfoque, particularmente 
 en el contexto de la generación automatizada de casos de prueba. Estos métodos permiten construir 
