--- a/tables/objectsBuilders.tex
+++ b/tables/objectsBuilders.tex
@@ -5,7 +5,7 @@
 \hline
 Class & Budget &
 \multicolumn{2}{c}{\textsf{No. of Objs}} \\
-&& \tiny{\textbf{SoloMetodosGeneradores}} & \tiny{\textbf{TodosLosMetodos}} \\
+&& \tiny{\textbf{MGO}} & \tiny{\textbf{API}} \\
 \hline
 \multirow{3}{*}{\textbf{NCL}} 
 &	60	&	6648	&	470	\\
