added rq1 beapi

--- a/tables/tableEficienciaBEAPI.tex
+++ b/tables/tableEficienciaBEAPI.tex
@@ -15,7 +15,7 @@
     &   6   &  0.24     & 7.11     & 55987 & 55987 & 521904 & 335930 \\
 
 &   &	7	&	2.31	&	\textbf{108.08} & 960800 & 960800 &	9875550	&	6725609	\\
-%&	&	8	&	50.59	& TO & 19173961	& &	215616158 &	\\
+&	&	8	&	50.59	& TO & 19173961	& &	215616158 &	\\
 &	&	9	&	\textbf{1333.88}	& TO & 435848050 & & 5325611829	& \\
 \cmidrule{2-9}
  &{\textbf{FibHeap}}
@@ -29,8 +29,8 @@
       &   7   &   0.26     &  25.32      & 107416 &107416 & 261788 &859337 \\  
     &    &   8   &   0.85     &  \textbf{163.39}     & 603744 &603744 & 1323194&5433706\\
 
-%&	&	9	&	7.65	& TO &	8746120	& & 11778107	&	\\
-%&	&	10	&	107.30	& TO & 117157172 &	& 150727471	 &		\\
+&	&	9	&	7.65	& TO &	8746120	& & 11778107	&	\\
+&	&	10	&	107.30	& TO & 117157172 &	& 150727471	 &		\\
     &	&	11	&	\textbf{2558.32}	& TO & 2835325296 & & 2985116257 &		\\
 \cmidrule{2-9}
  &BST 
@@ -64,7 +64,7 @@
 
     &	&	11	&	\textbf{1271.23}	&	5.80 & 20267 & 20267 &	2504382415 &	222950	\\
 \hightlight
-%&	&	12	&	TO	& 14.58 &		&	54761	&		&	657146	\\
+&	&	12	&	TO	& 14.58 &		&	54761	&		&	657146	\\
 
 
 \hightlight
@@ -81,19 +81,19 @@
 
     &   7   & .77	& 44.452 & 107416 & 107416 & 1447594 & 859337 \\
 &   &	8	&	5.96	& \textbf{97.08} &	603744	& 603744 & 13329584	&	5433706	\\
-%&	&	9	&	65.21	& TO &	8746120	& &	139623323	&		\\
+&	&	9	&	65.21	& TO &	8746120	& &	139623323	&		\\
 &	&	10	&	\textbf{1174.91}	& TO &	117157172 &	&	2064639445	&		\\
-% \cmidrule{2-9}
-%  &SLList 
+\cmidrule{2-9}
+ &SLList 
 % % 	&	3	&	0.118	&	13	&	28	&	0.02	&	13	&	43	\\
 % % &	&	4	&	0.1	&	85	&	127	&	0.11	&	85	&	345	\\
 % % &	&	5	&	0.13	&	781	&	996	&	0.33	&	781	&	3911	\\
 % % % &	&	6	&	0.15	&	9331	&	11224	&	1.58	&	9331	&	55993	\\
 % % 	&	7	&	0.24	&	137257	&	160168	&	15.38	&	137257	&	960807	\\
-% 	&	8	&	1.36	&	2396745	&	2739181	&	297.41	&	2396745	&	19173969	\\
-% &	&	9	&	30.47	&	48427561	&	54481060	&	TO	&		&		\\
-% &	&	10	&	681.89	&	1111111111	&	1234567966	&	TO	&		&		\\
-% \cmidrule{2-9}
+	&	8	&	1.36	&	2396745	&	2739181	&	297.41	&	2396745	&	19173969	\\
+&	&	9	&	30.47	&	48427561	&	54481060	&	TO	&		&		\\
+&	&	10	&	\textbf{681.89}	&	\textbf{1111111111}	&	1234567966	&	TO	&		&		\\
+\cmidrule{2-9}
 %  &DLList 
 % % 		&	3	&	0.101	&	13	&	42	&	0.01	&	13	&	43	\\
 % % &	&	4	&	0.105	&	85	&	152	&	0.05	&	85	&	345	\\
@@ -110,17 +110,17 @@
 % 	&	5	&	0.63	&	18555	&	1205794	&	0.84	&	975	&	9760	\\
 % &	&	6	&	7.12	&	324726	&	26462391	&	4.80	&	11196	&	134364	\\
 % &	&	7	&	182.25	&	6565468	&	657989516	&	58.75	&	160132	&	2241862	\\
-\midrule 
-\hightlight
+% \midrule 
+% \hightlight
 &	AVL
 
      &   5   &  3.54   &  0.05 & 1107 & 62 &  12277946 & 317 \\
 \hightlight
 &   &   6   &  \textbf{213.63} &  .009 & 3969 & 157 & 701862289 &  950 \\
 \hightlight
-%&	&	11	&	TO	& 5.11 &		&	20267	&	&	222950	\\
+&	&	11	&	TO	& 5.11 &		&	20267	&	&	222950	\\
 \hightlight
-%&	&	12	&	TO	& 19.92	&		&	54761	&	&	657146	\\
+&	&	12	&	TO	& 19.92	&		&	54761	&	&	657146	\\
 \hightlight
 &	&	13	&	TO	& \textbf{46.71}	&		&	145206	&	&	1887693	\\
 \cmidrule{2-9}	
@@ -142,9 +142,9 @@
 &   &   4   &  \textbf{37.546}	& 0.05  & 121853251 & 51 & 121855507 & 210 \\
 %\hightlight
 
-%&	&	10	&	TO	& 34.72		&		&	223191	&		&	2231922	\\
+&	&	10	&	TO	& 34.72		&		&	223191	&		&	2231922	\\
 %\hightlight
-%&	&	11	&	TO	& 181.11		&		&	974427	&		&	10718710	\\
+&	&	11	&	TO	& 181.11		&		&	974427	&		&	10718710	\\
 \hightlight
 &	&	12	&	TO	& \textbf{966.41}		&		&	4302645	&		&	51631754	\\
 \cmidrule{2-9}															
@@ -164,7 +164,7 @@
 \hightlight
 &	{\textbf{FibHeap}}
 
-%    &  3    & 0.214	    & 0.04 & 1317           &48    & 39213        & 199 \\
+   &  3    & 0.214	    & 0.04 & 1317           &48    & 39213        & 199 \\
 %\hightlight
 
    &  4    & 1.851	    &0.13  &   131444       &  335 & 5681553 & 1683\\
@@ -173,7 +173,7 @@
 
 &	&	5	&	\textbf{346.275}	& 0.70 &	21629930	& 4381 &	1295961583	&	26297	\\
 %\hightlight
-%&	&	6	&	TO	&	6.51	&		&	54159	&		&	379125	\\
+&	&	6	&	TO	&	6.51	&		&	54159	&		&	379125	\\
 
 \hightlight
 \multirow{-18}{*}{\rotatebox[origin=c]{90}{\textbf{ROOPS}}}
@@ -190,7 +190,7 @@
 
     &   11  &   12.184  & 204.83 & 974427 & 974427 & 62669069 & 10718710\\
 &	&	12	&	65.305	& \textbf{1235.67} &	4302645	& 4302645 &	308229505 &	51631754	\\
-%&	&	13	&	326.524	& TO & 19181100	& &	1514612776	&		\\
+&	&	13	&	326.524	& TO & 19181100	& &	1514612776	&		\\
 &	&	14	&	\textbf{1751.4}	& TO & 86211885	& &	7438853941  &		\\
 \cmidrule{2-9}															
 &	DLL	
@@ -213,11 +213,11 @@
 
     &   7   &  10.76 &	0.78	& 911   &   561     & 44832139  & 7866\\
 &   &   8   &  \textbf{283.33} &	1.57	&  2489 &   1657    & 1044561963    & 26526\\
-%&   &   9   &   TO    & 4.12	&       &   4748    &               & 85478 \\
+&   &   9   &   TO    & 4.12	&       &   4748    &               & 85478 \\
 
 
-%&	&	10	&	TO	&	11.39	&		&	14077	&		&	281558	\\
-%&	&	11	&	TO	&	34.88	&		&	39942	&		&	878743	\\
+&	&	10	&	TO	&	11.39	&		&	14077	&		&	281558	\\
+&	&	11	&	TO	&	34.88	&		&	39942	&		&	878743	\\
 &	&	12	&	TO  &	\textbf{84.51} 	&		&	112237	&		&	2693710	\\
 \cmidrule{2-9}															
 \hightlight
@@ -228,7 +228,7 @@
 \hightlight
 &	&	7	&	1.209	& \textbf{8.26} &  1545157	& 4397 &	3398383	&	246288	\\
 %\hightlight
-%&	&	8	&	32.075	& TO &	54251909	& &	117487014	&		\\
+&	&	8	&	32.075	& TO &	54251909	& &	117487014	&		\\
 
 
 \hightlight
@@ -240,7 +240,7 @@
 
     &   6   &   0.128	& 4.35	& 55987 & 55987 & 56008 & 335930 \\
 &	&	7	&	0.517	& \textbf{83.06} &	960800	& 960800 &	960828	&	6725609	\\
-%&	&	8	&	7.952	& TO	& 19173961	&	& 19173997	&		\\
+&	&	8	&	7.952	& TO	& 19173961	&	& 19173997	&		\\
 &	&	9	&	\textbf{212.919}	& TO	& 435848050	&	& 435848095	&		\\
 
 % \cmidrule{2-9}															
@@ -266,7 +266,7 @@
     &   5   &   .55     & 24.95	 & 40526 & 34276 & 162375   &1028287\\
 
 &	&	6	&	2.85	& \textbf{866.71} &	1207261	& 1098397 &	3381725	&	46132686	\\
-%&	&	7	&	74.27	& TO &	43539441	& &	88359041 &		\\
+&	&	7	&	74.27	& TO &	43539441	& &	88359041 &		\\
 &	&	8	&	\textbf{1980.70}	& TO &	1626500673	& &	2671020961	&		\\
 \bottomrule
 
