--- a/experimental.tex
+++ b/experimental.tex
@@ -504,11 +504,38 @@ de ejecución, número de estructuras generadas y exploradas, y escalabilidad co
 Los resultados experimentales, presentados en la Tabla~\ref{table:korat-beapi}, cubren una muestra 
 representativa de casos tomados de los bancos de pruebas \textsf{Korat}, \textsf{FAJITA}, 
 \textsf{ROOPS} y \textsf{Kiasan}. Para cada clase evaluada, informamos los tiempos de generación 
-(en segundos), la cantidad de estructuras válidas generadas y el total de estructuras exploradas 
-por cada técnica. Incluimos, para cada enfoque, el mayor \emph{scope} alcanzado exitosamente dentro 
+(en segundos, columna \emph{Time}), la cantidad de estructuras válidas generadas (\emph{Generated}) y el total de estructuras exploradas 
+(\emph{Explored}) por cada técnica. Incluimos, para cada enfoque, los mayores \emph{scope} (Columna \emph{S}), alcanzado exitosamente dentro 
 del tiempo límite de 60 minutos, indicando en negrita los tiempos correspondientes a los límites 
 de escalabilidad. Vale aclarar que no se utilizo el benchamarks \textsf{realWorld} en esta sección, ya que
 no se dispone de \texttt{repOK}s para estas clases, lo que impide una comparación justa con \textsf{Korat}.
+
+Agrupando por banco, se observa que en el conjunto \emph{KORAT} la herramienta \emph{Korat} es más veloz en 4/6 clases (el 67\% mas veloz que \textsf{BEAPI}); 
+en \textsf{FAJITA}, \emph{BEAPI} supera a \emph{Korat} en 3/4 (75\%); en \emph{ROOPS}, \emph{BEAPI} lo hace en 5/7 (71\%); 
+y en \textsf{Kiasan}, \textsf{Korat} es más rápido en 6/7 (86\%). 
+En términos cualitativos, \emph{BEAPI} tiende a rendir mejor en estructuras fuertemente restringidas (pocas instancias válidas), 
+mientras que \textsf{Korat} conserva ventaja cuando el dominio válido crece con rapidez.
+
+A modo de ejemplo, cuando \emph{BEAPI} prevalece lo hace con reducciones de tiempo muy pronunciadas. Veamos un ejemplo,
+en \textsf{FAJITA} con el caso de \emph{AVL}:
+Para scope 10, Korat demora 163.50 segundos mientras que BEAPI tarda 1.92 segundos. 
+Dicho de otro modo, \emph{BEAPI} es aproximadamente 85 veces más rápido. 
+Para scope 11 en el mismo caso, los tiempos son 1271.23 frente a 5.80 segundos, \emph{BEAPI}
+es unas 219 veces más rapido. 
+
+A la inversa, cuando \textsf{Korat} domina (típico en su propio banco de pruebas), las ventajas también son claras. 
+Por ejemplo, \textsf{KORAT} para el caso \textsf{DLList}:
+Para scope 6 \emph{Korat} tarda 0.24 segundos mientras que \emph{BEAPI} demora 7.11 segundos. 
+Dicho de otro modo, \textsf{Korat} es aproximadamente 30 veces más rápido. 
+
+Los resultados muestran un comportamiento mixto. En estructuras con restricciones fuertes —como los 
+árboles rojo-negro (\texttt{RBT}) y los árboles binarios de búsqueda (\texttt{BST})— \emph{BEAPI} 
+supera a \textsf{Korat}, al explorar menos estados y terminar en menos tiempo. Esto ocurre porque 
+en estas estructuras el número de configuraciones válidas es más bajo, lo que permite a \emph{BEAPI} 
+recorrer el espacio de soluciones de forma eficiente. Por el contrario, en estructuras más permisivas, 
+como listas doblemente enlazadas (\texttt{DLList}) o montículos binomiales (\texttt{BinHeap}), 
+\textsf{Korat} logra un mejor rendimiento gracias a su estrategia de poda temprana basada en 
+\texttt{repOK}.
 
 En estos experimentos, se aseguraron condiciones comparables: los \texttt{repOK}s utilizados con 
 \textsf{Korat} fueron los provistos originalmente por los autores de cada benchmark y no se 
@@ -520,18 +547,17 @@ Sin embargo, para un mismo caso y alcance, ambas herramientas deberían generar 
 de estructuras válidas, salvo en casos donde hay errores en los \texttt{repOK}s o diferencias sutiles 
 en la definición de \emph{scope}.
 
-Los resultados muestran un comportamiento mixto. En estructuras con restricciones fuertes —como los 
-árboles rojo-negro (\texttt{RBT}) y los árboles binarios de búsqueda (\texttt{BST})— \emph{BEAPI} 
-supera a \textsf{Korat}, al explorar menos estados y terminar en menos tiempo. Esto ocurre porque 
-en estas estructuras el número de configuraciones válidas es más bajo, lo que permite a \emph{BEAPI} 
-recorrer el espacio de soluciones de forma eficiente. Por el contrario, en estructuras más permisivas, 
-como listas doblemente enlazadas (\texttt{DLList}) o montículos binomiales (\texttt{BinHeap}), 
-\textsf{Korat} logra un mejor rendimiento gracias a su estrategia de poda temprana basada en 
-\texttt{repOK}.
-
 Cabe destacar dos tipos de excepciones en los resultados. En primer lugar, algunos casos incluyen 
 \texttt{repOK}s con errores, que impactan negativamente en la eficiencia de \textsf{Korat}; estos 
 casos están sombreados en la tabla y se analizan más en detalle en la Sección~\ref{sec:existing-specs-analysis}. 
+Un caso ilustrativo es el de \texttt{BinHeap}, donde \textsf{Korat} alcanza el \emph{scope} 8 utilizando 
+el \texttt{repOK} de \texttt{ROOPS}, el \emph{scope} 10 con el de \texttt{FAJITA}, y el \emph{scope} 11 
+con su propia especificación, todas ellas equivalentes en términos de estructuras generadas. Esto evidencia 
+la sensibilidad de \textsf{Korat} a la forma en que se escriben los \texttt{repOK}s, los cuales, si están 
+ajustados específicamente para su motor de búsqueda, pueden mejorar significativamente su rendimiento. 
+No obstante, cuando los \texttt{repOK}s presentan errores o están mal diseñados, su impacto negativo 
+puede ser severo, como se analiza en profundidad en la Sección~\ref{sec:existing-specs-analysis}.
+
 En segundo lugar, en estructuras como \texttt{RBT} y \texttt{FibHeap}, la diferencia semántica en la 
 noción de \emph{scope} entre ambas técnicas produce discrepancias. Por ejemplo, hay estructuras de 
 tamaño $n$ que solo pueden obtenerse mediante secuencias que superan temporalmente dicho tamaño 
@@ -546,23 +572,15 @@ ejecución. Sin embargo, un punto a favor de \emph{BEAPI} es que no depende de l
 \texttt{repOK}; esto lo hace más robusto ante especificaciones incorrectas o mal escritas, mientras 
 que \textsf{Korat} puede verse severamente afectado por ellas.
 
-En cuanto al rendimiento observado, \textsf{Korat} muestra mejor desempeño en 4 de los 6 casos 
-pertenecientes a su propio banco de pruebas. En el benchmark \textsf{FAJITA}, \emph{BEAPI} supera 
-a \textsf{Korat} en 3 de 4 casos, mientras que en \textsf{ROOPS} lo hace en 5 de 7. Finalmente, 
-en el banco \textsf{Kiasan}, \textsf{Korat} resulta más rápido en 6 de 7 casos. Esta tendencia confirma 
-que \emph{BEAPI} ofrece un mejor rendimiento en estructuras altamente restringidas —donde el número 
-de configuraciones válidas es reducido— mientras que \textsf{Korat} mantiene la ventaja en dominios 
-más amplios, donde la cantidad de estructuras válidas crece de forma acelerada. Esto se debe a que 
-en tales escenarios, \emph{BEAPI} debe generar y evaluar muchas más secuencias de entrada en cada 
-iteración, lo cual penaliza su desempeño.
-
-Un caso ilustrativo es el de \texttt{BinHeap}, donde \textsf{Korat} alcanza el \emph{scope} 8 utilizando 
-el \texttt{repOK} de \texttt{ROOPS}, el \emph{scope} 10 con el de \texttt{FAJITA}, y el \emph{scope} 11 
-con su propia especificación, todas ellas equivalentes en términos de estructuras generadas. Esto evidencia 
-la sensibilidad de \textsf{Korat} a la forma en que se escriben los \texttt{repOK}s, los cuales, si están 
-ajustados específicamente para su motor de búsqueda, pueden mejorar significativamente su rendimiento. 
-No obstante, cuando los \texttt{repOK}s presentan errores o están mal diseñados, su impacto negativo 
-puede ser severo, como se analiza en profundidad en la Sección~\ref{sec:existing-specs-analysis}.
+% En cuanto al rendimiento observado, \textsf{Korat} muestra mejor desempeño en 4 de los 6 casos 
+% pertenecientes a su propio banco de pruebas. En el benchmark \textsf{FAJITA}, \emph{BEAPI} supera 
+% a \textsf{Korat} en 3 de 4 casos, mientras que en \textsf{ROOPS} lo hace en 5 de 7. Finalmente, 
+% en el banco \textsf{Kiasan}, \textsf{Korat} resulta más rápido en 6 de 7 casos. Esta tendencia confirma 
+% que \emph{BEAPI} ofrece un mejor rendimiento en estructuras altamente restringidas —donde el número 
+% de configuraciones válidas es reducido— mientras que \textsf{Korat} mantiene la ventaja en dominios 
+% más amplios, donde la cantidad de estructuras válidas crece de forma acelerada. Esto se debe a que 
+% en tales escenarios, \emph{BEAPI} debe generar y evaluar muchas más secuencias de entrada en cada 
+% iteración, lo cual penaliza su desempeño.
 
 En conclusión, \emph{BEAPI} es una herramienta eficiente para la generación exhaustiva acotada. 
 Ofrece tiempos competitivos y, en varios casos, mejores que \textsf{Korat}, especialmente cuando 
@@ -577,19 +595,23 @@ la calidad de la especificación no está garantizada.
 En esta pregunta de investigación evaluamos el impacto que tienen las optimizaciones propuestas 
 de \emph{BEAPI} en su rendimiento general frente al enfoque de generación exhaustiva tradicional. 
 Concretamente, analizamos cuatro configuraciones de la herramienta: \textsf{SM/BLD}, que habilita tanto 
-la coincidencia de estados (State Matching) como la identificación de constructores (\emph{builders}); 
+la coincidencia de estados (\emph{State Matching}) como la identificación de métodos generadores de objetos (\emph{builders}); 
 \textsf{SM}, que activa únicamente la coincidencia de estados; \textsf{BLD}, que habilita únicamente 
-la identificación de constructores; y \textsf{NoOPT}, que desactiva ambas optimizaciones, funcionando 
+la identificación de métodos generadores de objetos; y \textsf{NoOPT}, que desactiva ambas optimizaciones, funcionando 
 como un enfoque de fuerza bruta.
 
-Para este análisis, nos enfocamos en el benchmark \texttt{Real World}, que incluye seis 
-implementaciones reales de estructuras de datos ampliamente utilizadas: \texttt{LinkedList} 
-(67 métodos en la API), \texttt{TreeSet} (34), \texttt{TreeMap} (61), \texttt{HashMap} (45), \texttt{NCL} (34) y 
-\texttt{Schedule} (12). La Tabla~\ref{tab:results-realWorld} 
-resume los resultados obtenidos. Cabe mencionar que se realizaron experimentos equivalentes para 
-el resto de los benchmarks utilizados en este capítulo, pero se omiten en las tablas en esta tesis por motivos de espacio.
-El conjunto \texttt{Real World} representa adecuadamente el comportamiento observado en los demás casos, 
-y resulta suficiente para sustentar las conclusiones extraídas en esta sección.
+% Para este análisis, nos enfocamos en el benchmark \texttt{Real World}, que incluye seis 
+% implementaciones reales de estructuras de datos ampliamente utilizadas: \texttt{LinkedList} 
+% (67 métodos en la API), \texttt{TreeSet} (34), \texttt{TreeMap} (61), \texttt{HashMap} (45), \texttt{NCL} (34) y 
+% \texttt{Schedule} (12). La Tabla~\ref{tab:results-realWorld} 
+% resume los resultados obtenidos. Cabe mencionar que se realizaron experimentos equivalentes para 
+% el resto de los benchmarks utilizados en este capítulo, pero se omiten en las tablas en esta tesis por motivos de espacio.
+% El conjunto \texttt{Real World} representa adecuadamente el comportamiento observado en los demás casos, 
+% y resulta suficiente para sustentar las conclusiones extraídas en esta sección.
+
+La Tabla~\ref{tab:results-realWorld} \cacho{Ver como referencias, hacer una sola tabla} resume los resultados para el conjunto \textsf{Real World} 
+(seis implementaciones ampliamente usadas: \texttt{LinkedList} —67 métodos—, \texttt{TreeSet} —34—, \texttt{TreeMap} —61—, \texttt{HashMap} —45—, \texttt{NCL} —34— y \texttt{Schedule} —12—). 
+Resultados análogos se reportan para los demás benchmarks en las tablas correspondientes de esta sección; en conjunto, todos ellos muestran el mismo patrón y fundamentan las conclusiones presentadas.
 
 Los resultados muestran de forma contundente que la configuración sin optimizaciones (\textsf{NoOPT}) 
 tiene un rendimiento deficiente incluso en los estudios de caso más simples y con alcances bajos. 
@@ -616,11 +638,21 @@ coincidencia de estados resulta esencial para lograr tiempos razonables de ejecu
 El mayor beneficio se observa en la configuración \textsf{SM/BLD}, donde ambas optimizaciones están 
 habilitadas. En esta configuración, \emph{BEAPI} escala significativamente mejor, alcanzando scopes 
 mucho mayores en todos los casos analizados, con tiempos de ejecución hasta cientos de veces menores 
-que con las demás configuraciones. Por ejemplo, para \texttt{NCL}, se logra alcanzar \textit{scope} 6 
-en 73.78 segundos con \textsf{SM/BLD}, mientras que con \textsf{SM} apenas se alcanza \textit{scope} 4 
-en más de 3 segundos, y \textsf{NoOPT} no logra ejecutar siquiera scopes bajos. Para \texttt{TreeSet}, 
-el contraste es aún más pronunciado: \textsf{SM/BLD} alcanza \textit{scope} 13 en 226 segundos, mientras 
-que \textsf{SM} requiere casi 900 segundos para el mismo alcance.
+que con las demás configuraciones.
+
+Donde la tabla lo permite comparar directamente, se observan reducciones de tiempo muy pronunciadas frente a \textsf{SM} solo: 
+por ejemplo, en \texttt{TreeSet} (scope 13) \textsf{SM/BLD} tarda 226.66 segundos versus 887.83 segundos con \textsf{SM}  (casi 4 veces más rapido con las optimizaciones).
+En \texttt{TreeMap} (scope 6) \textsf{SM/BLD} tarda 839.87 segundos versus 2901.37,s segundos con \textsf{SM} (casi 3.5 veces más rapido);
+En \texttt{Linkedlist} (scope 6) \textsf{SM/BLD} tarda 0.96 segundos versus 258.85,s segundos con \textsf{SM} (casi 270 veces más rapido); y en 
+\texttt{NCL} (scope 4) \textsf{SM/BLD} tarda 0.41 segundos versus 3.48,s segundos con \textsf{SM} (casi 8 veces más rapido).
+
+
+
+% Por ejemplo, para \texttt{NCL}, se logra alcanzar \textit{scope} 6 
+% en 73.78 segundos con \textsf{SM/BLD}, mientras que con \textsf{SM} apenas se alcanza \textit{scope} 4 
+% en más de 3 segundos, y \textsf{NoOPT} no logra ejecutar siquiera scopes bajos. Para \texttt{TreeSet}, 
+% el contraste es aún más pronunciado: \textsf{SM/BLD} alcanza \textit{scope} 13 en 226 segundos, mientras 
+% que \textsf{SM} requiere casi 900 segundos para el mismo alcance.
 
 Estos resultados evidencian que las optimizaciones propuestas no solo reducen tiempos de ejecución, 
 sino que amplían sustancialmente los límites de escalabilidad de la herramienta. Sin estas mejoras, 
@@ -634,10 +666,10 @@ resulta crucial para obtener un rendimiento competitivo. Estas optimizaciones tr
 en una herramienta capaz de escalar a scopes altos sin sacrificar exhaustividad ni precisión, 
 permitiendo su aplicación efectiva en casos de uso reales.
 
-Para todos los experimentos presentados en esta sección, se empleó un \emph{scope} fijo de 5 durante la 
-identificación de métodos generadores, y el tiempo máximo requerido por esta etapa fue de 132 segundos, 
-correspondiente a la estructura \emph{TreeMap}, que posee 61 métodos públicos. Verificamos manualmente que, 
-en todos los casos, el conjunto de métodos identificados fuera suficiente para construir los objetos válidos.
+% Cabe destacar, que para todos los experimentos presentados en esta sección, se empleó un \emph{scope} fijo de 5 durante la 
+% identificación de métodos generadores de objectos, y el tiempo máximo requerido por esta etapa fue de 132 segundos, 
+% correspondiente a la estructura \emph{TreeMap}, que posee 61 métodos públicos. Verificamos manualmente que, 
+% en todos los casos, el conjunto de métodos identificados fuera suficiente para construir los objetos válidos.
 
 Cabe señalar que la identificación de métodos generadores se realiza típicamente una única vez por clase, 
 y puede reutilizarse en múltiples ejecuciones posteriores de \emph{BEAPI}. En consecuencia, su costo se 
@@ -647,6 +679,7 @@ en los tiempos de ejecución reportados para \textsf{BEAPI} en los distintos exp
 No obstante, es importante destacar que este preprocesamiento introduce una optimización significativa en 
 términos de eficiencia, con un costo computacional bajo en relación con el proceso completo de generación. 
 
+\cacho{Puse todos los casos, todos los scope como habiamos dicho de otra RQ, cualquier cosa saco info si es mucho}
 
 \input{tables/optimizaciones}
 
